# brahmand5

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  pytest.ini
apps/greet/: Cargo.toml  Containerfile  README.md  build.rs
apps/greet/proto/: greet.proto
apps/greet/src/: main.rs
apps/greet/tests/: README.md  integration_test.rs
apps/hello-rust/: Cargo.toml
apps/hello-world/: main.py  pyproject.toml
apps/password_manager/: README.md  __init__.py  commands.py  core.py  crypto.py  main.py  models.py  pyproject.toml  storage.py
apps/password_manager/tests/: __init__.py  test_cli.py  test_core.py  test_generator.py  test_storage.py
dotfiles/: editors.zsh  git.zsh  gitconfig  llvm.zsh  rustup.zsh
src/brahmand5/: __init__.py
