[project]
name = "brahmand5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.4",
    "typer>=0.21.1",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "apps/hello-world",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
